2022-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/import.c (ImportViewPixelArea): Fix Coverity issue 381868
	"Control flow issues (DEADCODE)".

	* magick/blob.c (DetachBlob): Do not dereference blob_info->data
	if it is null.  Addresses Coverity issue 381869 "Null pointer
	dereferences (FORWARD_NULL)".

	* coders/jpeg.c (FreeMagickClientData): Fix Coverity issue 381870
	"Null pointer dereferences".

	* magick/export.c (ExportViewPixelArea): Fix Coverity issue 381871
	"Control flow issues (DEADCODE)" for the case where QuantumDepth =
	32.

2022-11-05 Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/wpg.c Shrink amount of colors when palette is bigger than
        raster could store.


2022-11-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (ReadBlobString): Fix oss-fuzz issue 53001
	"graphicsmagick:coder_TXT_fuzzer: Use-of-uninitialized-value in
	ReadBlobString", which occurs due a bug remaining in recent
	changes.

2022-11-04 Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/tga.c Remove junk \n from log after printing footer contents.

2022-11-03  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* PerlMagick/t/input_3chars.xpm New testcase
        with 3 bytes encoding per one pixel.
	* PerlMagick/t/reference/read/input_3chars_xpm.miff
	* PerlMagick/t/read.t: Added input_xpm_pal16.miff to PerlMagick test
	suite.

2022-11-03 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/xpm.c Allow to read pallete that contains more colors
        than MaxColormapSize.

2022-11-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageInfo): Avoid creating temporary files
	when reading files with .bz2, .gz, .svgz, and .Z extensions if the
	format is non-ambiguous based on the file extension, and the
	reader does not require seeking.

	* magick/magick.c (MagickToMime): Add MIME mappings for apng,
	avif, bmp, ico, and webp.

2022-10-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
