@@ -1,5 +1,5 @@
 /*
-% Copyright (C) 2004 - 2018 GraphicsMagick Group
+% Copyright (C) 2004 - 2022 GraphicsMagick Group
 %
 % This program is covered by multiple licenses, which are described in
 % Copyright.txt. You should have received a copy of Copyright.txt with this
@@ -589,12 +589,13 @@ QuantumDepthCB(void *mutable_data,
                 mutable_context->channel_lut[i] = scale*(i/scale);
             }
         }
-#else
-      ARG_NOT_USED(*mutable_context);
-#endif
 
       if (MagickFail == status)
         return status;
+#else
+      ARG_NOT_USED(*mutable_context);
+      ARG_NOT_USED(status);
+#endif
 
       switch (immutable_context->channel)
         {
