@@ -40,6 +40,8 @@
 <p>2022-11-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li><p>magick/operator.c (QuantumDepthCB): Fix Coverity issue 381867
+&quot;Control flow issues (DEADCODE)&quot;.</p></li>
 <li><p>magick/import.c (ImportViewPixelArea): Fix Coverity issue 381868
 &quot;Control flow issues (DEADCODE)&quot;.</p></li>
 <li><p>magick/blob.c (DetachBlob): Do not dereference blob_info-&gt;data
