@@ -1,5 +1,8 @@
 2022-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/operator.c (QuantumDepthCB): Fix Coverity issue 381867
+	"Control flow issues (DEADCODE)".
+
 	* magick/import.c (ImportViewPixelArea): Fix Coverity issue 381868
 	"Control flow issues (DEADCODE)".
 
